<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4F4F6"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0.2"
        android:background="@drawable/background_textview"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/number7Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number7"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="NestedWeights" 
            />

        <Button
            android:id="@+id/number8Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number8"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/number9Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number9"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/operatorPlusButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/operatorPlus"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/number4Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/number5Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number5"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/number6Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number6"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/operatorMinusButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/operatorMinus"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/number1Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/number2Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/number3Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/operatorCButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/operatorC"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/number0Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/number0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/operatorSpaceButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/operatorSpace"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/operatorEqualsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/operatorEquals"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>
